--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "bluebird": "^3.7.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.3"
+    "mongoose": "^5.7.3",
+    "underscore": "^1.9.1",
+    "uuid": "^3.3.3"
   }
 }
